# SecureBank

docker/: account-service.Dockerfile  ai-security-agent.Dockerfile  api-gateway.Dockerfile  auth-service.Dockerfile  base.Dockerfile  docker-compose.security.yml  docker-compose.yml  fraud-detection-service.Dockerfile  frontend.Dockerfile  nginx.conf  notification-service.Dockerfile  soar-service.Dockerfile  transaction-service.Dockerfile  trivy-policy.yaml
docker/scripts/: gen-certs.sh  init-multi-db.sh  init-vault.sh  seed-demo-data.sh
iac/: main.tf
iac/environments/dev/: main.tf
iac/environments/prod/: main.tf
iac/modules/kafka/: main.tf
iac/modules/kubernetes/: main.tf
iac/modules/monitoring/: main.tf  values-prom.yaml
iac/modules/vault/: main.tf
k8s/apps/: account-service.yaml  ai-security-agent.yaml  api-gateway.yaml  auth-service.yaml  fraud-detection-service.yaml  notification-service.yaml  soar-service.yaml  transaction-service.yaml
k8s/base/: namespaces.yaml  network-policies.yaml  rbac.yaml  resource-quotas.yaml  runtimeclass.yaml
k8s/helm/: Chart.yaml  values-dev.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  service-deployment.yaml
k8s/kafka/: schema-registry.yaml  strimzi-kafka.yaml
k8s/policies/gatekeeper/: disallow-privileged.yaml  k8spsphostpath.yaml
k8s/policies/kyverno/: disallow-latest-tag.yaml  require-non-root.yaml  require-resources.yaml  verify-cosign-signature.yaml
k8s/vault/: vault-ha.yaml
monitor/falco/: falco.yaml
monitor/loki/: loki.yaml  promtail.yaml
monitor/ml/: Dockerfile  README.md  serve_log_anomaly.py  train_log_anomaly.py
monitor/prometheus/: alerts.yml  prometheus.yml
monitor/qradar/: README.md  loki-to-qradar.py
scripts/: publish-to-github.ps1
src/ai-security-agent/: pyproject.toml
src/ai-security-agent/app/: __init__.py  adversarial.py  code_review.py  main.py  reasoner.py  settings.py
src/auth-service/: pyproject.toml
src/frontend/: app.js  index.html  styles.css
src/memory-safety-demo/: Dockerfile.hardened  Dockerfile.vuln  Makefile  README.md  attack.sh  hardened.c  verify_hardening.sh  vuln.c
src/shared/: pyproject.toml
src/shared/schemas/: fraud-result.avsc  transaction.avsc
src/shared/securebank_shared/: __init__.py  audit.py  auth.py  config.py  crypto.py  db.py  jwt_dep.py  kafka.py  logging.py  middleware.py  opa.py  sessions.py  url_safety.py  validation.py  vault.py
src/shared/tests/: test_crypto.py  test_url_safety.py
src/soar-service/: pyproject.toml
src/soar-service/app/: __init__.py  main.py  playbooks.py  settings.py
(+59 files in other folders)
