[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securebank-ai-security-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "securebank-shared @ file:../shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "anthropic>=0.40",
  "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
