[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securebank-shared"
version = "1.0.0"
description = "Shared security & infrastructure library for SecureBank microservices"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "argon2-cffi>=23.1",
  "pyjwt[crypto]>=2.9",
  "cryptography>=43",
  "hvac>=2.3",
  "httpx>=0.27",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "prometheus-client>=0.20",
  "python-json-logger>=2.0",
  "structlog>=24.1",
  "pyotp>=2.9",
  "qrcode[pil]>=7.4",
  "aiokafka>=0.11",
  "slowapi>=0.1.9",
  "bleach>=6.1",
  "email-validator>=2.2",
  "tenacity>=9.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5", "numpy>=1.26", "pandas>=2.2"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-cov>=5.0",
       "ruff>=0.6", "bandit>=1.7", "mypy>=1.11", "pip-audit>=2.7"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E","F","W","I","B","S","UP","ASYNC","SIM","RUF"]
ignore = ["S101"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.bandit]
exclude_dirs = ["tests"]
