[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securebank-soar"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "securebank-shared @ file:../shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "redis>=5.0",
  "kubernetes>=30.1",
  "aiokafka>=0.11",
  "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
